test/Frontend/no-arguments.swift
// RUN: not %swift 2>&1 | FileCheck %s
// CHECK: error: no arguments provided to '-frontend'


